e-farming-project/k8s/istio/e-farming-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: efarming-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: efarming-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - efarming-gateway
  http:
  - match:
    - uri:
        prefix: /animal-rearing
    route:
    - destination:
        host: animal-rearing-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /fishery
    route:
    - destination:
        host: fishery-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /poultry
    route:
    - destination:
        host: poultry-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /backend
    route:
    - destination:
        host: backend-service
        port:
          number: 3000
